                                                        -*- fundamental -*-

Changelog for 1.8 Series
forthcoming

Changelog for 1.8.0

Added functionalities
* Authentication and session storage through encrypted cookies (#4418)
* CSV upload of parts, services and overhead
* Upload of logos and use in document templates (#1816)
* Print templates for PNL, Balance sheet and generic reports now
  * User-editable
  * Customizable per company
  * Stored in the database like all other templates (#811)
* Parts searches can be restricted by type (part, service, ...)
* SysV init script template for RedHat/CentOS (#2900)
* New configuration keys in '[mail]' section of ledgersmb.conf (#4378)
* Beginnings of a web services API, served at /erp/api/v0 (#4452)
* Import of OFX bank statement files for reconciliation

Changed functionalities
* Faster loading of the menu
* Faster loading of selected accounts in the GL accounts drop-down
* Faster loading of the goods number and description drop-downs
* All payments recorded in the database as primary data (no longer inferred)
* New UI for uploading and editing document (print) templates
* Colors of default scheme changed to follow the soft-tone of the Claro theme
* Manual tax lines with 0 (zero) tax and taxable amounts are no longer posted
* Employee 'Wages & Deductions' (experimental) page now hidden until enabled
* Templates for printed documents need to escape inserted data (was automatic)
* Search checkmarks 'Open/Closed' replaced by radio button 'Open/Closed/All'
* Default exchange rates cannot be NULL
* Don't display delete button for in-use currency or exchange rate types
* Removed cash/check/deposit dropdown POS remnant from single payment screen
* Harmonized CSS themes; now using CSS3 variables for overall consistency
* Removed support for 2-digit years in date input
* Failed migrations from LSMB1.2/1.3 or SL2.8/3.0 restore original schema

Bugs fixed